@@ -1,3 +1,7 @@
+Apr 5, 2004
+
+  * TS: CHR translation now leaves CHR store empty
+
 Apr 4, 2004
 
   * JW: added :- use_module(library(chr)) to all examples.
